# agent-court

./: .gitignore  README.en.md  README.md
.claude/plan/: dashboard-mode.md  issue-driven-court.md
docs/: ARCHITECTURE.en.md  ARCHITECTURE.md  cc-connect-bridge.en.md  cc-connect-bridge.md  dashboard-mode.md  issue-driven-acceptance-checklist.md  issue-driven-workflow.md  lan-deployment.en.md  lan-deployment.md
docs/launchd/: ai.k2lab.gitea-watcher.plist.template
dotfiles/: starship.toml
mcp/court-mcp/: bangjiao.py  dashboard_tmux.py  dual_channel_approval.py  gitea_client.py  gitea_credentials.py  gitea_watcher.py  grant_cli.py  grants.py  im_reply_router.py  issue_resolver.py  jushi_daemon.py  jushi_extract.py  jushi_redact.py  jushi_writer.py  lingpai.py  lingpai_cli.py  lvli.py  onboard.py  peer_daemon.py  policy.py  pyproject.toml  record.py  seen_state.py  server.py  shenli.py  shenpi.py  shenpi_cli.py  tuiguan.py  yiguan_daemon.py  zhuyin.py
mcp/court-mcp/prompts/: judge.md
mcp/court-mcp/shenpi_channels/: feishu.py  terminal.py  wechat.py
mcp/court-mcp/tests/: test_bangjiao.py  test_dashboard_tmux.py  test_dual_channel_approval.py  test_gitea_client.py  test_gitea_client_errors.py  test_gitea_watcher.py  test_grants.py  test_im_reply_router.py  test_issue_resolver.py  test_jushi.py  test_jushi_bash.sh  test_lan_walkthrough.py  test_lingpai.py  test_lvli.py  test_mcp_gitea_tools.py  test_onboard.py  test_onboard_bash.sh  test_seen_state.py  test_shenpi.py  test_tuiguan.py  test_watcher_mode_branch.py
tests/: test_pre_push_hook.sh
(+38 files in other folders)
