[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-yamen-mcp"
version = "0.2.0"
description = "MCP server exposing an agent-yamen bus to upstream LLM clients (Claude Code, Cursor, Zed, custom assistants)."
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.0.0",
  "pyyaml>=6.0",
  "cryptography>=42.0",
  "aiohttp>=3.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.urls]
homepage = "https://github.com/YOUR_GH_USER/agent-yamen"

[tool.setuptools]
py-modules = [
  "server",
  "bangjiao",
  "yiguan_daemon",
  "zhuyin",
  "gitea_credentials",
  "gitea_client",
  "gitea_watcher",
  "shenli",
  "dashboard_tmux",
  "dual_channel_approval",
  "issue_resolver",
  "im_reply_router",
]
